--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -86,7 +86,10 @@
 		box-sizing: border-box;
 	}
 	&__icon {
-		fill: currentColor;
+		fill: currentColor !important;
+		path {
+			fill: currentColor !important;
+		}
 		&-container {
 			padding: 0 10px 0 0;
 		}
